fix(dual-range): adjust spacing

--- a/src/components/dual-range/dual-range.css
+++ b/src/components/dual-range/dual-range.css
@@ -41,32 +41,33 @@
 
 #dual-range-ticks {
   --tick-height: var(--spacing-1);
-  width: 100%;
   height: var(--tick-height);
   margin-top: var(--spacing-6);
+  margin-right: calc(var(--spacing-1) + var(--spacing-050));
+  margin-left: var(--spacing-2);
   display: flex;
   justify-content: space-between;
   background: linear-gradient(
       to right,
       var(--color-text-secondary),
-      var(--spacing-050),
+      var(--spacing-025),
       transparent var(--spacing-025)
     )
     repeat-x;
-  background-size: 8px var(--tick-height);
+  background-size: var(--spacing-1) var(--tick-height);
 }
 
 #dual-range-tick {
   position: relative;
   box-shadow: -1px 0 0 0 var(--color-text-secondary);
   height: var(--spacing-4);
-  width: 1px;
+  width: var(--spacing-025);
 }
 
 #dual-range-tick > p {
   font-size: var(--font-size-xs);
   color: var(--color-text-secondary);
   position: absolute;
-  top: 16px;
-  left: -16px;
+  top: var(--spacing-4);
+  left: calc(var(--spacing-4) * -1);
 }
